
# ANCHOR: book_all
[package]
name = "api"
version = "0.1.0"
authors = ["li"]
edition = "2021"
license = "MIT OR Apache-2.0"

# This will instruct Cargo to create a static
# library which CMake can link against
# ANCHOR: book_static_lib
[lib]
crate-type = ["staticlib"]
# ANCHOR_END: book_static_lib

# ANCHOR: book_dependencies
[dependencies]
cxx = "1.0.75"
# Use `cxx-qt = "0.4"` here instead!
cxx-qt = { path = "../cxx-qt/crates/cxx-qt" }
# cxx-qt = "0.3.0"
# Use `cxx-qt-lib = "0.4"` here instead!
cxx-qt-lib = { path = "../cxx-qt/crates/cxx-qt-lib" }
# cxx-qt-lib = "0.3.0"
# ANCHOR_END: book_dependencies

# cxx-qt-build generates C++ code from the `#[cxx_qt::bridge]` module
# and compiles it together with the Rust static library
# ANCHOR: book_build_dependencies
[build-dependencies]
# Use `cxx-qt-build = "0.4"` here instead!
# cxx-qt-build = "0.3.0"
cxx-qt-build = { path = "../cxx-qt/crates/cxx-qt-build" }
# ANCHOR_END: book_build_dependencies

# ANCHOR_END: book_all
